--- a/App.css
+++ b/App.css
@@ -42,3 +42,9 @@ table {
   margin-left: auto;
   margin-right: auto;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
